--- a/Match all i elements in all first child p elements.html
+++ b/Match all i elements in all first child p elements.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    p:first-child i {
+      color: blue;
+    }
+  </style>
 </head>
 <body>
 <p>I am a <i>strong</i> person. I am a <i>strong</i> person.</p>
