--- a/The lang Pseudo-class.html
+++ b/The lang Pseudo-class.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-
+<p>Some text <q lang="no">A quote in a paragraph</q> Some text.</p>
+<p>In this example, :lang defines the quotation marks for q elements with lang="no":</p>
 </body>
 </html>
