--- a/The lang Pseudo-class.html
+++ b/The lang Pseudo-class.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    q:lang(no) {
+      quotes: "~" "~";
+    }
+  </style>
 </head>
 <body>
 <p>Some text <q lang="no">A quote in a paragraph</q> Some text.</p>
