--- a/first-line Pseudo-element.html
+++ b/first-line Pseudo-element.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-
+<p>You can use the ::first-line pseudo-element to add a special effect to the first line of a text. Some more text. And even more, and more, and more, and more, and more, and more, and more, and more, and more, and more, and more, and more.</p>
 </body>
 </html>
