--- a/Pseudo-elements and HTML Classes.html
+++ b/Pseudo-elements and HTML Classes.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    p.intro::first-letter {
+      color: #ff0000;
+      font-size: 200%;
+    }
+  </style>
 </head>
 <body>
 <p class="intro">This is an introduction.</p>
