--- a/before Pseudo-element.html
+++ b/before Pseudo-element.html
@@ -5,6 +5,9 @@
     <title>Title</title>
 </head>
 <body>
+<h1>This is a heading</h1>
+<p>The ::before pseudo-element inserts content before the content of an element.</p>
 
+<h1>This is a heading</h1>
 </body>
 </html>
