--- a/before Pseudo-element.html
+++ b/before Pseudo-element.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    h1::before {
+      content: url(smiley.gif);
+    }
+  </style>
 </head>
 <body>
 <h1>This is a heading</h1>
