--- a/before Pseudo-element.html
+++ b/before Pseudo-element.html
@@ -5,7 +5,7 @@
     <title>Title</title>
   <style>
     h1::before {
-      content: url(smiley.gif);
+      content: url(IMAGE/_hot-line-set__gif.gif);
     }
   </style>
 </head>
