--- a/after Pseudo-element.html
+++ b/after Pseudo-element.html
@@ -5,6 +5,9 @@
     <title>Title</title>
 </head>
 <body>
+<h1>This is a heading</h1>
+<p>The ::after pseudo-element inserts content after the content of an element.</p>
 
+<h1>This is a heading</h1>
 </body>
 </html>
