--- a/after Pseudo-element.html
+++ b/after Pseudo-element.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    h1::after {
+      content: url(IMAGE/_hot-line-set__gif.gif);
+    }
+  </style>
 </head>
 <body>
 <h1>This is a heading</h1>
