--- a/marker Pseudo-element.html
+++ b/marker Pseudo-element.html
@@ -5,6 +5,16 @@
     <title>Title</title>
 </head>
 <body>
+<ul>
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ul>
 
+<ol>
+  <li>First</li>
+  <li>Second</li>
+  <li>Third</li>
+</ol>
 </body>
 </html>
