--- a/marker Pseudo-element.html
+++ b/marker Pseudo-element.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    ::marker {
+      color: red;
+      font-size: 30px;
+    }
+  </style>
 </head>
 <body>
 <ul>
