--- a/selection Pseudo-element.html
+++ b/selection Pseudo-element.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    ::selection {
+      color: red;
+      background: yellow;
+    }
+  </style>
 </head>
 <body>
 <h1>Select some text on this page:</h1>
