--- a/Image Transparency.html
+++ b/Image Transparency.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        img {
+            opacity: 0.5;
+        }
+    </style>
 </head>
 <body>
 <h1>Image Transparency</h1>
