--- a/Image Transparency 2.html
+++ b/Image Transparency 2.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    img {
+      opacity: 0.5;
+    }
+
+    img:hover {
+      opacity: 1.0;
+    }
+  </style>
 </head>
 <body>
 <h1>Image Transparency</h1>
