--- a/Image Transparency 3.html
+++ b/Image Transparency 3.html
@@ -5,6 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-
+<h1>Image Transparency</h1>
+<p>The opacity property is often used together with the :hover selector to change the opacity on mouse-over:</p>
+<img src="IMAGE/city.jpg" alt="Forest" width="300" height="300">
+<img src="IMAGE/city.jpg" alt="Forest" width="300" height="300">
+<img src="IMAGE/city.jpg" alt="Forest" width="300" height="300">
 </body>
 </html>
