--- a/Transparent Box.html
+++ b/Transparent Box.html
@@ -3,6 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    div {
+      background-color: #4CAF50;
+      padding: 10px;
+    }
+
+    div.first {
+      opacity: 0.1;
+    }
+
+    div.second {
+      opacity: 0.3;
+    }
+
+    div.third {
+      opacity: 0.6;
+    }
+  </style>
 </head>
 <body>
 <h1>Transparent Box</h1>
