--- a/Transparency using RGBA.html
+++ b/Transparency using RGBA.html
@@ -3,6 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        div {
+            background: rgb(76, 175, 80);
+            padding: 10px;
+        }
+
+        div.first {
+            background: rgba(76, 175, 80, 0.1);
+        }
+
+        div.second {
+            background: rgba(76, 175, 80, 0.3);
+        }
+
+        div.third {
+            background: rgba(76, 175, 80, 0.6);
+        }
+    </style>
 </head>
 <body>
 <h1>Transparent Box</h1>
