--- a/Text in Transparent Box.html
+++ b/Text in Transparent Box.html
@@ -5,6 +5,11 @@
     <title>Title</title>
 </head>
 <body>
+<div class="background">
+  <div class="transbox">
+    <p>This is some text that is placed in the transparent box.</p>
+  </div>
+</div>
 
 </body>
 </html>
