--- a/Text in Transparent Box.html
+++ b/Text in Transparent Box.html
@@ -5,7 +5,7 @@
     <title>Title</title>
   <style>
     div.background {
-      background: url(IMAGE/city.jpg) no-repeat ;
+      background: url(IMAGE/city.jpg) repeat ;
       border: 2px solid black;
     }
     div.transbox {
