--- a/remove the bullets.html
+++ b/remove the bullets.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <style>
+    ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+    }
+  </style>
 </head>
 <body>
 <p>In this example, we remove the bullets from the list, and its default padding and margin.</p>
