--- a/Vertical Navigation Bar.html
+++ b/Vertical Navigation Bar.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <title>Title</title>
   <style>
-
+    ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+    }
   </style>
 </head>
 <body>
