--- a/Vertical Navigation Bar 2.html
+++ b/Vertical Navigation Bar 2.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+
+    </style>
 </head>
+
 <body>
 <ul>
   <li><a href="#home">Home</a></li>
