--- a/Vertical Navigation Bar 2.html
+++ b/Vertical Navigation Bar 2.html
@@ -10,7 +10,10 @@
             padding: 0;
             width: 60px;
         }
-
+        li a {
+            display: block;
+            background-color: #dddddd;
+        }
     </style>
 </head>
 
