--- a/Vertical Navigation Bar 3.html
+++ b/Vertical Navigation Bar 3.html
@@ -5,6 +5,14 @@
     <title>Title</title>
 </head>
 <body>
+<h2>Vertical Navigation Bar</h2>
+
+<ul>
+  <li><a href="#home">Home</a></li>
+  <li><a href="#news">News</a></li>
+  <li><a href="#contact">Contact</a></li>
+  <li><a href="#about">About</a></li>
+</ul>
 
 </body>
 </html>
