--- a/Vertical Navigation Bar 3.html
+++ b/Vertical Navigation Bar 3.html
@@ -11,7 +11,17 @@
       width: 200px;
       background-color: #f1f1f1;
     }
-
+    li a {
+      display: block;
+      color: #000;
+      padding: 8px 16px;
+      text-decoration: none;
+    }
+    /* Change the link color on hover */
+    li a:hover {
+        background-color: #555;
+        color: white;
+    }
   </style>
 </head>
 <body>
