--- a/Active/Current Navigation Link.html
+++ b/Active/Current Navigation Link.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <title>Title</title>
   <style>
-
+    ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      width: 200px;
+      background-color: #f1f1f1;
+    }
   </style>
 </head>
 <body>
