--- a/Active/Current Navigation Link.html
+++ b/Active/Current Navigation Link.html
@@ -17,6 +17,10 @@
       padding: 8px 16px;
       text-decoration: none;
     }
+    li a.active {
+      background-color: #04AA6D;
+      color: white;
+    }
   </style>
 </head>
 <body>
