--- a/Center Links & Add Borders.html
+++ b/Center Links & Add Borders.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <title>Title</title>
   <style>
-
+    ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      width: 200px;
+      background-color: #f1f1f1;
+      border: 1px solid #555;
+    }
   </style>
 </head>
 <body>
