--- a/Center Links & Add Borders.html
+++ b/Center Links & Add Borders.html
@@ -12,6 +12,13 @@
       background-color: #f1f1f1;
       border: 1px solid #555;
     }
+    li a {
+      display: block;
+      color: #000;
+      padding: 8px 16px;
+      text-decoration: none;
+    }
+
   </style>
 </head>
 <body>
