--- a/Center Links & Add Borders.html
+++ b/Center Links & Add Borders.html
@@ -12,6 +12,10 @@
       background-color: #f1f1f1;
       border: 1px solid #555;
     }
+    li {
+        text-align: center;
+        border-bottom: 1px solid #555;
+    }
     li a {
       display: block;
       color: #000;
