--- a/Center Links & Add Borders.html
+++ b/Center Links & Add Borders.html
@@ -22,7 +22,9 @@
       padding: 8px 16px;
       text-decoration: none;
     }
-
+    li:last-child {
+        border-bottom: none;
+    }
   </style>
 </head>
 <body>
