--- a/Center Links & Add Borders.html
+++ b/Center Links & Add Borders.html
@@ -29,7 +29,10 @@
         background-color: #04AA6D;
         color: white;
     }
-
+    li a:hover:not(.active) {
+        background-color: #555;
+        color: white;
+    }
   </style>
 </head>
 <body>
