--- a/Full-height Fixed Vertical Navbar.html
+++ b/Full-height Fixed Vertical Navbar.html
@@ -4,7 +4,29 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
-
+        body {
+            margin: 0;
+        }
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            width: 25%;
+            background-color: #f1f1f1;
+            position: fixed;
+            height: 100%;
+            overflow: auto;
+        }
+        li a {
+            display: block;
+            color: #000;
+            padding: 8px 16px;
+            text-decoration: none;
+        }
+        li a.active {
+            background-color: #04AA6D;
+            color: white;
+        }
     </style>
 </head>
 <body>
