--- a/Floating List Items.html
+++ b/Floating List Items.html
@@ -10,7 +10,9 @@
             padding: 0;
             overflow: hidden;
         }
-
+        li {
+            float: left;
+        }
     </style>
 </head>
 <body>
