--- a/Floating List Items 2.html
+++ b/Floating List Items 2.html
@@ -13,6 +13,11 @@
     li {
       float: left;
     }
+    li a {
+      display: block;
+      padding: 8px;
+      background-color: #dddddd;
+    }
   </style>
 </head>
 <body>
