--- a/Horizontal Navigation Bar.html
+++ b/Horizontal Navigation Bar.html
@@ -16,6 +16,14 @@
 li {
   float: left;
 }
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
 </style>
 
 </head>
